Cleaned up the windows agent and server bash startup file. Removed the debug, log and yourkit (for agent) setup as it is not utilized. Removed the fallback for GO_SERVER and GO_SERVER_PORT